# Arden

./: .gitignore  README.md
Arden/: ArdenApp.swift  Info.plist
Arden.xcodeproj/: project.pbxproj
Arden/Integrations/: CommunicationIntegration.swift  DeviceIntegration.swift  InformationIntegration.swift  ProductivityIntegration.swift
Arden/Intents/: ArdenIntent.swift
Arden/Models/: AssistantModels.swift
Arden/Services/: AssistantService.swift  FunctionRouter.swift  LLMService.swift  SpeechService.swift
Arden/Views/: ContentView.swift
apps/rust-server/: Cargo.toml  wrangler.toml
apps/rust-server/src/: lib.rs  services.rs  types.rs
arrowhead/src/: goals.rs  lib.rs  notes.rs  obsidian_adapter.rs  todos.rs
