[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1.50"
gloo-utils = "0.1.6"
js-sys = "0.3.58"
worker-sys = "0.0.15"
wasm-bindgen = "0.2.84"
cfg-if = "1.0.0"
futures-util = "0.3.28"

[profile.release]
lto = true
strip = true
codegen-units = 1
